--- a/.env
+++ b/.env
@@ -1,6 +1,15 @@
-# .env
-SECRET_KEY=your-local-development-secret-key
+# .env.example - Template for environment variables
+SECRET_KEY=your-secret-key-here
 DATABASE_URL=sqlite:///community_connect.db
-WEATHER_API_KEY=demo-weather-key
-MAPS_API_KEY=demo-maps-key
+
+# Google OAuth - GET THESE FROM GOOGLE CLOUD CONSOLE
+GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+GOOGLE_REDIRECT_URI=http://localhost:5001/auth/google/callback
+
+# For production on Render
+GOOGLE_REDIRECT_URI=https://your-app-name.onrender.com/auth/google/callback
+
 FLASK_ENV=development
+WEATHER_API_KEY=your_weather_api_key
+MAPS_API_KEY=your_maps_api_key
