--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,7 @@ python-dotenv==1.0.0
 gunicorn==21.2.0
 psycopg2-binary==2.9.11
 email_validator==2.0.0
+google-auth==2.22.0
+google-auth-oauthlib==1.1.0
+google-auth-httplib2==0.1.0
+google-api-python-client==2.104.0
