--- a/render.yaml
+++ b/render.yaml
@@ -8,6 +8,7 @@ services:
     buildCommand: |
       pip install -r requirements.txt
       python init_production_db.py
+      python update_db_schema.py 
     startCommand: gunicorn run:app
     envVars:
       - key: SECRET_KEY
