--- a/render.yaml
+++ b/render.yaml
@@ -37,3 +37,40 @@ databases:
     plan: free
     databaseName: community_connect
     user: community_connect
+
+
+  # render.yaml - COMPLETE PRODUCTION CONFIG
+services:
+  - type: web
+    name: community-connect-project
+    env: python
+    plan: free
+    branch: main
+    buildCommand: |
+      pip install -r requirements.txt
+      python init_production_db.py
+    startCommand: gunicorn run:app
+    envVars:
+      # Flask & Security
+      - key: SECRET_KEY
+        generateValue: true
+      
+      # Database (auto-provided by Render)
+      - key: DATABASE_URL
+        fromDatabase:
+          name: community-connect-db
+          property: connectionString
+      
+      # Email Configuration
+      # Gmail (500 emails/day free)
+      - key: SMTP_SERVER
+        value: smtp.gmail.com
+      - key: SMTP_PORT
+        value: 587
+      - key: SMTP_USERNAME
+        syncValue: false  # Set your Gmail
+      - key: SMTP_PASSWORD
+        syncValue: false  # Set your Gmail App Password
+      - key: FROM_EMAIL
+        syncValue: false  # Should match SMTP_USERNAME
+      
