--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ google-auth==2.22.0
 google-auth-oauthlib==1.1.0
 google-auth-httplib2==0.1.0
 google-api-python-client==2.104.0
+psutil==5.9.6
 
 # Optional: For better email templates
 # Jinja2==3.1.2  # Already included with Flask
