--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,6 @@
-# render.yaml - COMPLETE UPDATED FILE
 services:
   - type: web
-    name: community-connect-project  # Updated to match your URL
+    name: community-connect-project  
     env: python
     plan: free
     branch: main
@@ -23,12 +22,10 @@ services:
         value: "demo-maps-key"
       - key: DEVELOPER_MODE
         value: "false"
-      # THESE MUST BE SET IN RENDER DASHBOARD
       - key: GOOGLE_CLIENT_ID
         syncValue: false
       - key: GOOGLE_CLIENT_SECRET
         syncValue: false
-      # CRITICAL: This must match your Google Cloud Console
       - key: GOOGLE_REDIRECT_URI
         value: "https://community-connect-project.onrender.com/auth/google/callback"
 
@@ -39,7 +36,6 @@ databases:
     user: community_connect
 
 
-  # render.yaml - COMPLETE PRODUCTION CONFIG
 services:
   - type: web
     name: community-connect-project
@@ -55,22 +51,22 @@ services:
       - key: SECRET_KEY
         generateValue: true
       
-      # Database (auto-provided by Render)
+      # Database
       - key: DATABASE_URL
         fromDatabase:
           name: community-connect-db
           property: connectionString
       
       # Email Configuration
-      # Gmail (500 emails/day free)
+      # Gmail (500 emails/day)
       - key: SMTP_SERVER
         value: smtp.gmail.com
       - key: SMTP_PORT
         value: 587
       - key: SMTP_USERNAME
-        syncValue: false  # Set your Gmail
+        syncValue: false  
       - key: SMTP_PASSWORD
-        syncValue: false  # Set your Gmail App Password
+        syncValue: false 
       - key: FROM_EMAIL
-        syncValue: false  # Should match SMTP_USERNAME
+        syncValue: false 
       
