--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-# requirements.txt - PRODUCTION READY
 Flask==2.3.3
 Flask-SQLAlchemy==3.0.5
 Flask-Login==0.6.3
@@ -15,6 +14,4 @@ google-auth-oauthlib==1.1.0
 google-auth-httplib2==0.1.0
 google-api-python-client==2.104.0
 psutil==5.9.6
-
-# Optional: For better email templates
-# Jinja2==3.1.2  # Already included with Flask
+Jinja2==3.1.2 
