--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,5 @@ google-auth-oauthlib==1.1.0
 google-auth-httplib2==0.1.0
 google-api-python-client==2.104.0
 psutil==5.9.6
-Jinja2==3.1.2 
+Jinja2==3.1.2
+sendgrid==6.11.0
