--- a/render.yaml
+++ b/render.yaml
@@ -1,72 +1,56 @@
 services:
   - type: web
-    name: community-connect-project  
+    name: community-connect-project
     env: python
     plan: free
-    branch: main
     buildCommand: |
       pip install -r requirements.txt
-      python init_production_db.py
-      python update_db_schema.py 
-    startCommand: ./boot.sh
+    startCommand: gunicorn run:app
     envVars:
+      # Required Flask Config
       - key: SECRET_KEY
         generateValue: true
+      
+      # Database (auto-provisioned)
       - key: DATABASE_URL
         fromDatabase:
           name: community-connect-db
           property: connectionString
-      - key: WEATHER_API_KEY
-        value: "demo-weather-key"
-      - key: MAPS_API_KEY
-        value: "demo-maps-key"
-      - key: DEVELOPER_MODE
-        value: "false"
+      
+      # Google OAuth (Required for login)
       - key: GOOGLE_CLIENT_ID
-        syncValue: false
+        sync: false
       - key: GOOGLE_CLIENT_SECRET
-        syncValue: false
-      - key: GOOGLE_REDIRECT_URI
-        value: "https://community-connect-project.onrender.com/auth/google/callback"
+        sync: false
+      
+      # Production URL (MUST match service name above)
+      - key: BASE_URL
+        value: https://community-connect-project.onrender.com
+      
+      # Email Configuration
+      - key: SMTP_SERVER
+        value: smtp.gmail.com
+      - key: SMTP_PORT
+        value: "587"
+      - key: SMTP_USERNAME
+        sync: false
+      - key: SMTP_PASSWORD
+        sync: false
+      - key: FROM_EMAIL
+        sync: false
+      
+      # API Keys
+      - key: WEATHER_API_KEY
+        sync: false
+      - key: MAPS_API_KEY
+        sync: false
+      
+      # Flask Settings
+      - key: FLASK_ENV
+        value: production
 
 databases:
   - name: community-connect-db
     plan: free
     databaseName: community_connect
-    user: community_connect
-
-
-services:
-  - type: web
-    name: community-connect-project
-    env: python
-    plan: free
-    branch: main
-    buildCommand: |
-      pip install -r requirements.txt
-      python init_production_db.py
-    startCommand: ./boot.sh
-    envVars:
-      # Flask & Security
-      - key: SECRET_KEY
-        generateValue: true
-      
-      # Database
-      - key: DATABASE_URL
-        fromDatabase:
-          name: community-connect-db
-          property: connectionString
-      
-      # Email Configuration
-      # Gmail (500 emails/day)
-      - key: SMTP_SERVER
-        value: smtp.gmail.com
-      - key: SMTP_PORT
-        value: 587
-      - key: SMTP_USERNAME
-        syncValue: false  
-      - key: SMTP_PASSWORD
-        syncValue: false 
-      - key: FROM_EMAIL
-        syncValue: false 
-      
+    user: community_connect_user
