--- a/render.yaml
+++ b/render.yaml
@@ -1,53 +1,32 @@
 services:
   - type: web
-    name: community-connect-project
-    env: python
+    name: community-connect-docker
+    env: docker
+    region: oregon
     plan: free
-    buildCommand: |
-      pip install -r requirements.txt
-    startCommand: gunicorn run:app
+    dockerfilePath: ./Dockerfile
+    dockerContext: .
     envVars:
-      # Required Flask Config
-      - key: SECRET_KEY
-        generateValue: true
-      
-      # Database (auto-provisioned)
       - key: DATABASE_URL
         fromDatabase:
           name: community-connect-db
           property: connectionString
-      
-      # Google OAuth (Required for login)
+      - key: SECRET_KEY
+        generateValue: true
       - key: GOOGLE_CLIENT_ID
         sync: false
       - key: GOOGLE_CLIENT_SECRET
         sync: false
-      
-      # Production URL 
       - key: BASE_URL
         value: https://community-connect-project.onrender.com
-      
-      # Email Configuration
-      - key: SMTP_SERVER
-        value: smtp.gmail.com
-      - key: SMTP_PORT
-        value: "587"
       - key: SMTP_USERNAME
         sync: false
       - key: SMTP_PASSWORD
         sync: false
       - key: FROM_EMAIL
         sync: false
-      
-      # API Keys
-      - key: WEATHER_API_KEY
-        sync: false
-      - key: MAPS_API_KEY
-        sync: false
-      
-      # Flask Settings
-      - key: FLASK_ENV
-        value: production
+    healthCheckPath: /health
+    autoDeploy: true
 
 databases:
   - name: community-connect-db
