--- a/.github/workflows/docker-build-push.yaml
+++ b/.github/workflows/docker-build-push.yaml
@@ -18,7 +18,7 @@ jobs:
       packages: write
     
     steps:
-    # 1. Get the code
+    # 1. Get the code 
     - name: Checkout repository
       uses: actions/checkout@v4
     
@@ -26,7 +26,7 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
     
-    # 3. Cache for faster builds (NEW)
+    # 3. Cache for faster builds 
     - name: Cache Docker layers
       uses: actions/cache@v3
       with:
